--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,18 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["import", "optimize-regex", "functional"],
+  "plugins": [
+    "import",
+    "optimize-regex"
+    // "functional"
+  ],
   "extends": [
     "eslint:recommended",
     "eslint-config-prettier",
     "plugin:import/errors",
     "plugin:import/warnings",
     "airbnb-base",
-    "plugin:functional/recommended",
+    // "plugin:functional/recommended",
     "eslint:recommended",
     "plugin:node/recommended",
     // must be last
