--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint --ext .js .",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(json|js)\"",
     "server": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
-    "start": "node index.js",
+    "start": "node --require dotenv/config index.js",
     "validate": "npm-run-all --parallel check-format lint"
   },
   "husky": {
@@ -50,6 +50,7 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
