Refactored validators to concat errors
If a req is missing or has erroneous data, the validation middleware will send back an array of errors.

For example, if a post requires both a name and text but both are missing, the error sent to the client will be an array with 2 messages.

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "airbnb-base",
-    // "plugin:functional/recommended",
+    // "cleanjs",
     "eslint:recommended",
     "plugin:node/recommended",
     // must be last
