--- a/package.json
+++ b/package.json
@@ -47,13 +47,17 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "folktale": "^2.3.2",
     "knex": "^0.20.3",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-cleanjs": "^4.0.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-better": "^0.1.5",
+    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-functional": "^3.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
